# dexi_bringup

./: CMakeLists.txt  CONFIG.md  README.md  dexi.repos  package.xml  setup.cfg  setup.py
config/: dexi_config.yaml  dexi_config_cm4.yaml  dexi_config_cm5.yaml  dexi_config_pi5.yaml
config/cm4/: config.txt
config/cm5/: config.txt
config/mavlink-router/: ark_cm4_main.conf  main.conf
config/pi5/: cmdline.txt  config.txt
dexi_bringup/: __init__.py  platform_params_node.py
launch/: dexi_bringup.launch.py  dexi_bringup_ark_cm4.launch.py  dexi_bringup_cm5.launch.py  dexi_bringup_pi5.launch.py  dexi_bringup_sitl.launch.py  dexi_bringup_unity_sim.launch.py
resource/: dexi_bringup
scripts/: dexi.service  install.bash  launch_by_architecture.py  start.bash
